--- a/tootoo2/examples/tootoo2-theo-armour.html
+++ b/tootoo2/examples/tootoo2-theo-armour.html
@@ -2,9 +2,9 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TA Drawing</title>
+<title></title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files.' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-05-02' >
 </head>
@@ -14,47 +14,61 @@
 <script src=../r1/mnu-menu-settings.js ></script>
 <script src=../r1/too-tootoo.js ></script>
 <script>
-// Copyright © 2017 Jaanga authors. MIT license
-// https://github.com/showdownjs/showdown
+// Copyright 2017 Pushme Pullyou authors ~ MIT license
+
+	var protocol, usr;
+
+	protocol = location.protocol;
+
+	if ( protocol === 'file:' ) {
+
+		usr  = location.pathname.slice( 0, location.pathname.indexOf( 'github.io' ) - 1 );
+		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
+
+	} else if ( protocol === 'https:' ) {
+
+		usr = location.host.slice( 0, location.host.indexOf( '.' ) );
+
+	}
 
 
-	user = {
+	let user = {
 		user : 'theo-armour',
 		subText : 'Pet the cat and don\'t get fat',
-		logo: '<img src="" height=32 >',
-		repo : 'drawing',
+		repo : 'theo-armour.github.io',
 		branch : 'master',
 		folder : '',
-//		noIndex : true
+		noIndex : true
 	};
+
 
 	init();
 
 	function init() {
 
-		var container, contents, hamburger, menu;
+		let container, contents, hamburger, menu;
 
 		CSS.setCSS();
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
 		container.innerHTML =
-
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
-					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+					'<a href=http://pushme-pullyou.github.io title="Jaanga - your Github repo happy place" > &#x2766 </a><br>' +
+					'<a href="" title="Click here to refresh this page" >' + user.user + '</a>' +
+//					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
+					' ~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 				'</h2>' +
 
-				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
+				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
+				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
-				'<details open>' +
+				'<details open >' +
 
-					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
+					'<summary><h3 id=menuTitle >Contents</h3></summary>' +
 
 					'<div id=breadcrumbs ></div>' +
 					'<div id=menuItems ></div>' +
@@ -81,7 +95,7 @@
 
 	}
 
-
 </script>
 </body>
 </html>
+
