--- a/tootoo2/examples/tootoo2-prediqtiv-r1.html
+++ b/tootoo2/examples/tootoo2-prediqtiv-r1.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r1/css-prediqtiv.js ></script>
+<script src=css-prediqtiv.js ></script>
 <script src=../r1/sel-select-users.js ></script>
 <script src=../r1/mnu-menu-settings.js ></script>
 <script src=../r1/too-tootoo.js ></script>
 <script>
-// Copyright 2017 Jaanga authors ~ MIT license
+// Copyright 2017 prediqtiv authors ~ MIT license
 
-	let images = 'https://raw.githubusercontent.com/prediqtiv/prediqtiv.github.io/master/images/';
+	let images = 'https://prediqtiv.github.io/images/';
 
 	user = {
 		user : 'prediqtiv',
@@ -79,8 +79,6 @@
 
 				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
-//				'<div id=selectUsers ></div>' +
-
 				'<details open >' +
 
 					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
@@ -112,7 +110,6 @@
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
 		TOO.initUser( user );
-
 
 	}
 
