--- a/tootoo2/examples/tootoo2-thejsway.html
+++ b/tootoo2/examples/tootoo2-thejsway.html
@@ -11,7 +11,6 @@
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script src=../r1/css.js ></script>
-<script src=../r1/sel-select-users.js ></script>
 <script src=../r1/mnu-menu-settings.js ></script>
 <script src=../r1/too-tootoo.js ></script>
 <script>
@@ -85,10 +84,12 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>' +
+				'<div><small>' +
+					'Source on GitHub: <a href="https://github.com/bpesquet/thejsway" target="_blank">The JavaScript Way</a>' + b +
+
 					'By Baptiste Pesquet' + b  +
-					'Get off to a good start in the JavaScript universe or catch up with its newest evolutions.' +
-				'</i></small></div>' + b +
+					'<i>Get off to a good start in the JavaScript universe or catch up with its newest evolutions.' +
+				'</i></small></div>' +
 
 				'<div>' +
 					'<button onclick=TOO.setMenu=TOO.setMenuContents;TOO.setMenu();  >Table of Conntents</button>' +
