--- a/tootoo2/examples/tootoo2-theo-pages2.html
+++ b/tootoo2/examples/tootoo2-theo-pages2.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 >
 <title>TA Pages2</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='' >
+<meta name=description content='Browse and view files' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-04-26' >
 </head>
