--- a/tootoo2/readme.html
+++ b/tootoo2/readme.html
@@ -8,7 +8,7 @@
 // This script allows you to read a markdown file locally
 // - so you can see what it looks like before you senff it to GitHub.
 
-	window.location.href = './r1/tootoo2-r1.html#@@@./README.md';
+	window.location.href = './tootoo2-r1.html#@@@./README.md';
 
 </script>
 </body>
