--- a/tootoo2/examples-r2/tootoo2-thejsway.html
+++ b/tootoo2/examples-r2/tootoo2-thejsway.html
@@ -44,16 +44,17 @@
 	};
 
 
-	TOO.tableOfContents  =
+	let MNU = {};
+	MNU.tableOfContents  =
 `
-[Read Me]( #README.md )
+* [Read Me]( #README.md )
 
 ## Introduction
 
-[About this book]( #manuscript/intro01.md )
-[Welcome to programming]( #manuscript/intro02.md )
-[Introducing JavaScript]( #manuscript/intro03.md )
-[What you\'ll need]( #manuscript/intro04.md )
+* [About this book]( #manuscript/intro01.md )
+* [Welcome to programming]( #manuscript/intro02.md )
+* [Introducing JavaScript]( #manuscript/intro03.md )
+* [What you\'ll need]( #manuscript/intro04.md )
 
 ## Learn to code programs
 1. [1. 3, 2, 1... Code!]( #manuscript/chapter01.md )
@@ -72,11 +73,21 @@
 ## Part III: Build web apps
 ...
 ## Conclusion
-[Acknowledgements]( #manuscript/concl02.md )
-
-[Contribution guidelines]( #CONTRIBUTING.md )
-[License]( #LICENSE)
+* [Acknowledgements]( #manuscript/concl02.md )
+* [Contribution guidelines]( #CONTRIBUTING.md )
+* [License]( #LICENSE)
 `
+	MNU.getFiles = function() {
+
+
+//		MNU.files = MNU.tableOfContents.replace( / /gi, '' ).replace( /\*\[(.*?)\]\(#/gi, '' ).replace( /\)/gi, '' ).split( '\n' );
+
+		MNU.files = MNU.tableOfContents.replace( /(.*)\((.*)\)(.*)/gi, '$2' ).split( '\n' );
+
+//console.log( '', MNU.files  );
+
+	}();
+
 
 	init();
 
@@ -114,7 +125,7 @@
 				'</div>' + b +
 
 
-				'<div id=mnuItems ></div>' +
+				'<div id=mnuContents ></div>' +
 
 				'<div id=mnuSettings ></div>' +
 				'<div id=mnuCount ></div>' +
@@ -146,6 +157,31 @@
 	function onHashChange() {
 
 		TOO.getFileSetContents( location.hash.slice( 1 ) );
+
+		if ( MNU.files ) {
+
+			links = document.getElementsByTagName( 'li' );
+
+			for ( let i = 0; i < links.length; i++ ) {
+
+				link = links[ i ];
+				text = link.firstChild.hash;
+
+				if ( text === location.hash ) {
+
+console.log( 'bingo ', MNU.files.indexOf( location.hash ) );
+
+					link.style.backgroundColor = 'lightgreen';
+
+				} else {
+
+					link.style = '';
+
+				}
+
+			}
+
+		}
 
 	}
 
