--- a/tootoo2/r2/readme.html
+++ b/tootoo2/r2/readme.html
@@ -8,7 +8,7 @@
 // This script allows you to read a markdown file locally
 // - so you can see what it looks like before you send it to GitHub.
 
-	window.location.href = './index.html#@@@tootoo/README.md';
+	window.location.href = '../index.html#@@@tootoo2/r2/README.md';
 
 </script>
 </body>
