--- a/tootoo2/utilities/get-github-dir-names-r2.html
+++ b/tootoo2/utilities/get-github-dir-names-r2.html
@@ -196,14 +196,30 @@
 			txt = txt.replace( 'Meatbook', 'Meat Book' );
 			txt = txt.replace( 'Forestsaerialfrance', 'Forests Aerial France' );
 			txt = txt.replace( 'Hanspeter2', 'Hans Peter' );
-			txt = txt.replace( 'Homepagephotos', 'Homepagephotos' );
-			txt = txt.replace( 'Todossantosnew', 'Todossantosnew' );
-			txt = txt.replace( 'Leaderphotos', 'Leaderphotos' );
-			txt = txt.replace( 'Bartholomeworthodoxturkey', 'Bartholomeworthodoxturkey' );
-			txt = txt.replace( 'Panoramafb', 'Panoramafb' );
-			txt = txt.replace( '', '' );
-
-
+			txt = txt.replace( 'Homepagephotos', 'Home Page Photos' );
+			txt = txt.replace( 'Todossantosnew', 'Todos Santos New' );
+			txt = txt.replace( 'Leaderphotos', 'Leader Photos' );
+			txt = txt.replace( 'Bartholomeworthodoxturkey', 'Bartholomew Orthodox Turkey' );
+			txt = txt.replace( 'Panoramafb', 'Panorama FB' );
+			txt = txt.replace( 'Goranbregovic', 'Goran Bregovic' );
+			txt = txt.replace( 'Goranbregovickristjanjarvi', 'Goran Bregovic Kristjan Jarvi' );
+			txt = txt.replace( 'Nigel_dickinson_portraits', 'Nigel Dickinson Prtraits' );
+			txt = txt.replace( 'Peripheryhost', 'Periphery Host' );
+			txt = txt.replace( 'Pollutionandenvironment', 'Pollution and Environment' );
+			txt = txt.replace( 'Pollutiondanube', 'Pollution Danube' );
+			txt = txt.replace( 'Animistafrica', 'Animist Africa' );
+			txt = txt.replace( 'Buddhismfrance', 'Buddhism France' );
+			txt = txt.replace( 'Elrociospain', 'El Rocio Spain' );
+			txt = txt.replace( 'Gypsypilgrimmage', 'Gypsy Pilgrimmage' );
+			txt = txt.replace( 'Semanasanta', 'Semana Santa' );
+			txt = txt.replace( 'Fishcircus', 'Fish Circus' );
+			txt = txt.replace( 'Romaexpo', 'Romaexpo' );
+			txt = txt.replace( 'Movingwalls', 'Movingwalls' );
+			txt = txt.replace( 'Saintesmaries', 'Saintesmaries' );
+			txt = txt.replace( 'Saralepelerinagedesgitans', 'Saralepelerinagedesgitans' );
+			txt = txt.replace( 'Gypsiesandguardianssaintesmaries', 'Gypsiesandguardianssaintesmaries' );
+			txt = txt.replace( 'Gypsycampssaintesmaries', 'Gypsycampssaintesmaries' );
+			txt = txt.replace( 'Gypsymusicdancebears', 'Gypsymusicdancebears' );
 
 			txt = txt.replace( '', '' );
 			txt = txt.replace( '', '' );
