--- a/tootoo3/dev/tootoo3-basic.html
+++ b/tootoo3/dev/tootoo3-basic.html
@@ -2,13 +2,19 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo2</title>
+<title></title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-05-03' >
-<link rel=stylesheet href=../r3/style.css >
+<link rel=stylesheet href=../dev/style3.css >
 </head>
+
+<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
+<script src=../dev/tootoo3.js ></script>
+<script src=../dev/menu3.js ></script>
+<script src=../dev/contents3.js ></script>
+
 <body>
 
 	<div id=container >
@@ -48,12 +54,6 @@
 
 	</div>
 
-<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r3/but-buttons.js ></script>
-<script src=../r3/sel-select-users.js ></script>
-<script src=../r3/set-settings-about.js ></script>
-<script src=../r3/too-tootoo.js ></script>
-<script src=../r3/cnt-contents.js ></script>
 <script>
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
@@ -89,12 +89,10 @@
 
 	function init() {
 
-		mnuTitle.innerHTML = document.title;
+		mnuTitle.innerHTML = 'TooToo HTML';
 		mnuTagline.innerHTML = document.head.querySelector( "[name=description]" ).content;
 
-		SEL.initSelectUsers();
-
-		SET.init();
+		MNU.init();
 
 		TOO.initUser( user );
 
