--- a/tootoo3/dev-custom/tootoo3-leader-photos.html
+++ b/tootoo3/dev-custom/tootoo3-leader-photos.html
@@ -4,9 +4,11 @@
 <meta charset=utf-8 >
 <title>Leader Photos</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Browse and view Nigel`s images on Leader Photos with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
+<meta name=date content='Browse and view Nigel`s images on Leader Photos with remarkable ease.' >
 <meta name=date content='2017-05-03' >
+
 <link rel=stylesheet href=../dev/style3.css >
 </head>
 
@@ -30,7 +32,7 @@
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
 
-			<div id=mnuTagline ><small></small></div>
+			<div id=mnuTagline ></div>
 
 			<div id=mnuContents ></div>
 
@@ -236,7 +238,7 @@
 	function init() {
 
 		mnuTitle.innerHTML = document.title;
-		mnuTagline.innerHTML = document.head.querySelector( "[name=description]" ).content;
+		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
 
 		TOO.initUser( user );
 
