--- a/tootoo3/dev/tootoo3-select.html
+++ b/tootoo3/dev/tootoo3-select.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo2</title>
+<title>TooToo3 Select</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -91,11 +91,10 @@
 	function init() {
 
 		mnuTitle.innerHTML = document.title;
-		mnuTagline.innerHTML = document.head.querySelector( "[name=description]" ).content;
+		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
 
 		SEL.initSelectUsers();
 
-		MNU.init();
 
 		selUser.selectedIndex = Math.floor( Math.random() * users.keys.length );
 
