--- a/tootoo3/utilitities/gather-files-into-one-r4.html
+++ b/tootoo3/utilitities/gather-files-into-one-r4.html
@@ -14,11 +14,8 @@
 
 	var title, fileNameHtm, fileNameCss;
 
-	title = 'preIQtiv - invest smarter';
-//	title = 'Leader Photos - by Nigel Dickinson';
-
-	fileNameHtm = '../r2/tootoo2-template.html';
-	fileNameHtm = '../examples-r2/tootoo2-prediqtiv.html';
+	fileNameHtm = '../dev/tootoo3-basic.html';
+//	fileNameHtm = '../examples-r2/tootoo2-prediqtiv.html';
 //	fileNameHtm = '../examples/tootoo2-leader-photos.html';
 
 	fileNameCss = '../r2/css.js';
@@ -26,13 +23,10 @@
 
 	files = [
 
-		'../r2/css.js',
-		'../r2/but-buttons.js',
-		'../r2/sel-select-users.js',
-		'../r2/set-settings-about.js',
-		'../r2/too-tootoo.js',
-		'../r2/mnu-items.js',
-		'../r2/cnt-contents.js',
+		'../dev/styles3.css',
+		'../dev/tootoo3.js',
+		'../dev/menu3.js',
+		'../dev/contents3.js',
 
 	];
 
